# Moonlight

./: .cproject  .gitattributes  .gitignore  .project  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  sdkconfig
frontend/: CHANGELOG.md  README.md  index.html  moonlight.js  styles.css
main/: CMakeLists.txt  Kconfig.projbuild  config.h  connect.c  main.c  main.h  moonlight.c  moonlight.h  server.c
